--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.0.0",
     "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-cssmin": "^0.11.0",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1"
   }
