--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "grunt-autoprefixer": "^2.0.0",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-cssmin": "^0.11.0",
-    "grunt-contrib-sass": "^0.8.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-sass": "^0.18.1"
   }
 }
