--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "author": "",
-  "name": "mscom-grid",
+  "name": "winjs-grid",
   "version": "0.1.0",
-  "homepage": "https://github.com/MicrosoftDotCom/mscom-grid",
+  "homepage": "https://github.com/winjs/grid",
   "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.0.0",
-    "grunt-contrib-connect": "^0.8.0",
+    "grunt-browser-sync": "^2.1.3",
     "grunt-contrib-cssmin": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-sass": "^0.18.1"
+    "grunt-sass": "^0.18.1",
+    "load-grunt-tasks": "^3.1.0"
   }
 }
