registering as bower package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "",
+  "author": "Microsoft.com - Kyle Zinter",
   "name": "winjs-grid",
   "version": "0.1.0",
   "homepage": "https://github.com/winjs/grid",
