--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "grunt-browser-sync": "^2.1.3",
     "grunt-contrib-cssmin": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-sass": "^0.18.1",
+    "grunt-sass": "~1.0.0",
     "load-grunt-tasks": "^3.1.0"
   }
 }
